--- a/main.html
+++ b/main.html
@@ -34,9 +34,47 @@
     <div class="item item25">25</div>
   </div>
 
-<script>
-//Your code goes here 
-</script>
+<!-- <!-- //Your code goes here  -->
+<!-- 	    <script>
+        var dragItem = null;
+        var startX, startY, offsetX, offsetY;
+	@@ -78,7 +78,38 @@
+            items[i].addEventListener('mousemove', drag);
+            items[i].addEventListener('mouseup', dragEnd);
+        }
+    </script> -->
+ -->
+
+	  <script>
+        const items = document.querySelector('.items');
+        let isMouseDown = false;
+        let startX, scrollLeft;
+
+        items.addEventListener('mousedown', (e) => {
+            isMouseDown = true;
+            items.classList.add('active');
+            startX = e.pageX - items.offsetLeft;
+            scrollLeft = items.scrollLeft;
+        });
+
+        items.addEventListener('mouseleave', () => {
+            isMouseDown = false;
+            items.classList.remove('active');
+        });
+
+        items.addEventListener('mouseup', () => {
+            isMouseDown = false;
+            items.classList.remove('active');
+        });
+
+        items.addEventListener('mousemove', (e) => {
+            if (!isMouseDown) return;
+            e.preventDefault();
+            const x = e.pageX - items.offsetLeft;
+            const scroll = (x - startX) * 3;
+            items.scrollLeft = scrollLeft - scroll;
+        });
+    </script>
 
   </body>
 </html>
