--- a/main.html
+++ b/main.html
@@ -2,60 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Click and Drag Cubes</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-    }
-
-    .cube {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background-color: red;
-      cursor: pointer;
-      user-drag: none; /* Disable native drag behavior */
-    }
-  </style>
+  <title>Click and Drag</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="cube" id="cube1"></div>
-  <div class="cube" id="cube2"></div>
-  <div class="cube" id="cube3"></div>
-  <!-- Add more cubes as needed -->
+  <div class="items">
+    <div class="item item1">01</div>
+    <div class="item item2">02</div>
+    <div class="item item3">03</div>
+    <div class="item item4">04</div>
+    <div class="item item5">05</div>
+    <div class="item item6">06</div>
+    <div class="item item7">07</div>
+    <div class="item item8">08</div>
+    <div class="item item9">09</div>
+    <div class="item item10">10</div>
+    <div class="item item11">11</div>
+    <div class="item item12">12</div>
+    <div class="item item13">13</div>
+    <div class="item item14">14</div>
+    <div class="item item15">15</div>
+    <div class="item item16">16</div>
+    <div class="item item17">17</div>
+    <div class="item item18">18</div>
+    <div class="item item19">19</div>
+    <div class="item item20">20</div>
+    <div class="item item21">21</div>
+    <div class="item item22">22</div>
+    <div class="item item23">23</div>
+    <div class="item item24">24</div>
+    <div class="item item25">25</div>
+  </div>
 
-  <script>
-    // Add an event listener to each cube to handle click and drag
-    const cubes = document.querySelectorAll('.cube');
-    let selectedCube = null;
-    let offsetX, offsetY;
+<script>
+//Your code goes here 
+</script>
 
-    cubes.forEach(cube => {
-      cube.addEventListener('mousedown', onMouseDown);
-      cube.addEventListener('mousemove', onMouseMove);
-      cube.addEventListener('mouseup', onMouseUp);
-    });
-
-    function onMouseDown(event) {
-      selectedCube = event.target;
-      offsetX = event.clientX - selectedCube.offsetLeft;
-      offsetY = event.clientY - selectedCube.offsetTop;
-    }
-
-    function onMouseMove(event) {
-      if (selectedCube) {
-        const x = event.clientX - offsetX;
-        const y = event.clientY - offsetY;
-        selectedCube.style.left = `${x}px`;
-        selectedCube.style.top = `${y}px`;
-      }
-    }
-
-    function onMouseUp() {
-      selectedCube = null;
-    }
-  </script>
-</body>
+  </body>
 </html>
